fixed canvas layout issues

--- a/html/styles/lessStyle.css
+++ b/html/styles/lessStyle.css
@@ -1241,6 +1241,26 @@ html {
     display: none;
   }
 }
+@media screen and (min-width: 767px) {
+  #chartContainer {
+    margin-top: 15%;
+  }
+}
+@media screen and (min-width: 767px) and (max-height: 1024px) {
+  #chartContainer {
+    margin-top: 25%;
+  }
+}
+@media screen and (min-width: 1023px) {
+  #chartContainer {
+    margin-top: 3%;
+  }
+}
+@media screen and (min-width: 1599) {
+  #chartContainer {
+    margin-top: 1%;
+  }
+}
 #chartContainer > div > a,
 #chartContainerTop > div > a {
   display: none;
@@ -1360,6 +1380,21 @@ html {
     padding-left: 20px;
     padding-right: 20px;
     margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 479px) {
+  #legendTop {
+    margin-top: 220px;
+  }
+}
+@media screen and (min-width: 567px) {
+  #legendTop {
+    margin-top: 290px;
+  }
+}
+@media screen and (min-width: 599px) {
+  #legendTop {
+    margin-top: 30px;
   }
 }
 @media screen and (min-width: 767px) {
