--- a/html/styles/style.less
+++ b/html/styles/style.less
@@ -1074,6 +1074,20 @@ body {
   }
 }
 
+#chartContainer{
+   @media screen and (min-width: 767px){
+     margin-top: 15%;
+   }
+    @media screen and (min-width: 767px) and (max-height: 1024px){
+     margin-top: 25%;
+   }
+   @media screen and (min-width: 1023px){
+     margin-top: 3%;
+   }
+   @media screen and (min-width: 1599){
+     margin-top: 1%;
+   }
+}
 
 #chartContainer > div > a, #chartContainerTop > div > a{
   display: none;
@@ -1176,6 +1190,18 @@ body {
     padding-right: 20px;
     margin-bottom: 30px;
   } 
+  @media screen and (min-width: 479px){
+    margin-top: 220px;
+  }
+  
+  @media screen and (min-width: 567px){
+    margin-top: 290px;
+  }
+  
+  @media screen and (min-width: 599px){
+    margin-top: 30px;
+  }
+  
   @media screen and (min-width: 767px){
     display: none;
   }
